--- a/index.html
+++ b/index.html
@@ -48,33 +48,33 @@
         <div class="project">
             <img src="./img/screenshot2.png" alt="" class="img" >
             <p>University Admission Predication App</p>
-            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> View Code</a>
+            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> view code</a>
         </div>
         <div class="project">
             <img src="./img/sc1.png" alt="" class="img">
             <p>Campus Placement Predication App</p>
-            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> View Code</a>
+            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> view code</a>
         </div>
         <div class="project">
             <img src="./img/social1.png" alt="" class="img">
             <p>Social Media App</p>
-            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> View Code</a>
+            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> view code</a>
 
         </div>
         <div class="project">
             <img src="./img/English1.png" alt="" class="img">
             <p>English Learning Website</p>
-            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> View Code</a>
+            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> view code</a>
         </div>
         <div class="project">
             <img src="./img/djangoecom.png" alt="" class="img">
             <p>Ecommerce Webiste</p>
-            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> View Code</a>
+            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> view code</a>
         </div>
         <div class="project">
             <img src="./img/Pro1.png" alt="" class="img">
             <p>Blog Website</p>
-            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> View Code</a>
+            <a href="/"><i class="fa fa-github" aria-hidden="true"></i> view code</a>
         </div>
     </div>
 
